Fix correct enrich cache bug.
The enrich cache currently uses `SearchResponse` as cache value,
which contains the hits used by the enrich processor for enrichment.
What is actually used is by the enrich processor is `SearchHit.getSourceAsMap()`,
which is a map of maps representation of a search hit.

The problem is that this map is mutable and the map of maps is directly
passed into `IngestDocument` and at the same time this is cached by the
enrich cache via `SearchResponse` cache value. Any processor that modifies
the content added by the enrich processor, also changes the map of maps
representation of a search hit in the cache. This corrupts the cache,
because if this the enrich cache serves a cache entry for the same key,
a different snippet added to the document being enriched.

The following changes have been made to fix this bug:
* Use `List<Map<?, ?>>` as cache value for the enrich cache.
* Upon caching lookup / search, make an immutable deep copy of `SearchHit.getSourceAsMap()`.
* Upon serving an entry from the cache, make a normal deep copy,
  so the enrichent can be safely modified by subsequent processors.

Closes #82340